# action-record

./: LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
6c/54741b1ac0/: metadata.json
6c/54741b1ac0/0/: content_hash.txt  full.jsonl  metadata.json
9d/53fefd7510/: metadata.json
9d/53fefd7510/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
9e/80f5785eb0/: metadata.json
9e/80f5785eb0/0/: content_hash.txt  full.jsonl  metadata.json
b3/47f07605f9/: metadata.json
b3/47f07605f9/0/: content_hash.txt  full.jsonl  metadata.json
bf/925ce19f91/: metadata.json
bf/925ce19f91/0/: content_hash.txt  full.jsonl  metadata.json
c6/4db83cfffd/: metadata.json
c6/4db83cfffd/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/adr/: 0001-record-shape-and-field-set.md  0002-pydantic-v2-strict-mode.md  0003-cli-plain-text-contract.md  0004-example-is-generated-not-written.md
e4/66d15d65db/: metadata.json
e4/66d15d65db/0/: content_hash.txt  full.jsonl  metadata.json
examples/: generate_record.py  record.json
examples/fixtures/: PROVENANCE.md  dra-deviceclass-resourceclaim.yaml
f6/a2df35d910/: metadata.json
f6/a2df35d910/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
src/action_record/: __init__.py  cli.py  schema.py
tests/: test_cli.py  test_example.py  test_schema.py
