[project]
name = "action-record"
version = "0.1.0"
description = "A structured, validatable record of agent work"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/action_record"]

[tool.pytest.ini_options]
testpaths = ["tests"]
